--- a/x11/xbindkeys/Makefile
+++ b/x11/xbindkeys/Makefile
@@ -7,7 +7,7 @@
 #
 
 PORTNAME=	xbindkeys
-PORTVERSION=	1.7.0
+PORTVERSION=	1.7.1
 CATEGORIES=	x11
 MASTER_SITES=	http://hocwp.free.fr/xbindkeys/
 
@@ -15,35 +15,37 @@ MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Allows you to launch shell commands under X with your keyboard
 
 USE_XLIB=	yes
-USE_REINPLACE=	yes
 USE_GNOME=	gnometarget
+USE_REINPLACE=	yes
 GNU_CONFIGURE=	yes
+CONFIGURE_ENV=	CPPFLAGS="-I${LOCALBASE}/include" \
+		LDFLAGS="-L${LOCALBASE}/lib"
 
-MAN1=	xbindkeys.1
+MAN1=		xbindkeys.1
 
 WISH=		${LOCALBASE}/bin/wish8.4
 
-.if defined(WITH_GUI)
-RUN_DEPENDS+=	wish8.4:${PORTSDIR}/x11-toolkits/tk84
-MAN1+=		xbindkeys_show.1
-PLIST_SUB+=	WITH_GUI=""
-.else
-CONFIGURE_ARGS+=	--disable-tk
-PLIST_SUB+=	WITH_GUI="@comment "
-.endif
-
 .if defined(WITH_GUILE)
-LIB_DEPENDS=	guile.15:${PORTSDIR}/lang/guile
-CONFIGURE_ENV+=	CPPFLAGS="${CXXFLAGS} -I${LOCALBASE}/include" \
-		LDFLAGS="-L${LOCALBASE}/lib"
+LIB_DEPENDS+=	guile.15:${PORTSDIR}/lang/guile
 .else
 CONFIGURE_ARGS+=	--disable-guile
 .endif
 
+.if defined(WITH_TCLTK)
+RUN_DEPENDS+=	wish8.4:${PORTSDIR}/x11-toolkits/tk84
+MAN1+=		xbindkeys_show.1
+PLIST_SUB+=	TCLTK=""
+.else
+CONFIGURE_ARGS+=	--disable-tk
+PLIST_SUB+=	TCLTK="@comment "
+.endif
+
 pre-everything::
 	@${ECHO_MSG} ""
-	@${ECHO_MSG} "	Define WITH_GUI to install xbindkeys_show (requires Tk)"
-	@${ECHO_MSG} "	Define WITH_GUILE to allow guile configuration file style"
+	@${ECHO_MSG} "XbindKeys has the following tunable options:"
+	@${ECHO_MSG} ""
+	@${ECHO_MSG} "	WITH_GUILE=yes			Turns on Guile support"
+	@${ECHO_MSG} "	WITH_TCLTK=yes			Turns on Tcl/Tk support"
 	@${ECHO_MSG} ""
 
 post-patch:
