Somehow, 'make test' doesn't catch all problems. Mark broken with perl 5.005_03 until I can figure out what the exact problem i.s
Submitted by:	Michel Gravey <admin@the-e-management.com>,
		"Michel Gravey" <michel.gravey@orange.fr>,
		pav

--- a/converters/p5-MIME-Base64/Makefile
+++ b/converters/p5-MIME-Base64/Makefile
@@ -20,4 +20,10 @@ PERL_CONFIGURE=	YES
 MAN3=		MIME::Base64.3 \
 		MIME::QuotedPrint.3
 
-.include <bsd.port.mk>
+.include <bsd.port.pre.mk>
+
+.if ${PERL_LEVEL} < 500600
+BROKEN=		Does not run.
+.endif
+
+.include <bsd.port.post.mk>
