Unbreak using the postgresql73 distfile.
PR:		61194
Submitted by:	Palle Girgensohn <girgen@pingpong.net>

--- a/databases/py-PyGreSQL/Makefile
+++ b/databases/py-PyGreSQL/Makefile
@@ -4,18 +4,11 @@
 #
 # $FreeBSD$
 #
-POSTGRESQL_PORT?=	databases/postgresql7
 
 PORTNAME=	PyGreSQL
-PORTVERSION!=	cd ${.CURDIR}/../../${POSTGRESQL_PORT} && ${MAKE} -V PORTVERSION
-PORTREVISION?=	0
+PORTREVISION=	0
 CATEGORIES=	databases python
-MASTER_SITES=	${MASTER_SITE_PGSQL}
-MASTER_SITE_SUBDIR!=	cd ${.CURDIR}/../../${POSTGRESQL_PORT} && ${MAKE} -V MASTER_SITE_SUBDIR
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
-DISTFILES!=	cd ${.CURDIR}/../../${POSTGRESQL_PORT} && ${MAKE} -V DISTFILES
-DIST_SUBDIR=	postgresql
-WRKSRC=		${WRKDIR}/postgresql-${PORTVERSION}
 
 MAINTAINER=	girgen@pingpong.net
 COMMENT=	A Python interface to PostgreSQL, including a DP-API 2.0 wrapper
@@ -24,10 +17,16 @@ BUILD_DEPENDS=	${DATETIME_DEP}:${PORTSDIR}/lang/py-mx-base
 RUN_DEPENDS=	${DATETIME_DEP}:${PORTSDIR}/lang/py-mx-base
 LIB_DEPENDS=	pq.3:${PORTSDIR}/${POSTGRESQL_PORT}
 
-MD5_FILE=	${.CURDIR}/../../${POSTGRESQL_PORT}/distinfo
+POSTGRESQL_PORT?=	databases/postgresql7
+POSTGRESQL_SUBPORT=YES
 
-USE_GMAKE=	YES
-GNU_CONFIGURE=	YES
+WRKSRC=		${WRKDIR}/postgresql-${PORTVERSION}
+
+# The PyGreSQL distfile is nowhere to be found, but exists in
+# postgresql-7.3 distribution so do not be alarmed if you use
+# a newer version of postgresql
+.include <${.CURDIR}/../postgresql73/Makefile>
+
 USE_PYTHON=	yes
 CONFIGURE_ARGS=	--with-python --prefix=${PREFIX}
 MAKE_ARGS+=	-C src/interfaces/python
