--- a/graphics/jpegpixi/Makefile
+++ b/graphics/jpegpixi/Makefile
@@ -6,9 +6,9 @@
 #
 
 PORTNAME=	jpegpixi
-PORTVERSION=	0.3
+PORTVERSION=	0.14
 CATEGORIES=	graphics
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
+MASTER_SITES=	http://www.zero-based.org/software/jpegpixi/
 MASTER_SITE_SUBDIR=	jpegpixi
 
 MAINTAINER=	verm@drunkmonk.net
@@ -19,5 +19,7 @@ LIB_DEPENDS=	jpeg.9:${PORTSDIR}/graphics/jpeg
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-jpeglib-include=${LOCALBASE}/include \
 		--with-jpeglib-lib=${LOCALBASE}/lib
+
+MAN1=		jpegpixi.1 jpeghotp.1
 
 .include <bsd.port.mk>
