Add gnetcat, a GPL'ed reimplementation of netcat.
PR:		ports/61262
Submitted by:	Liam Foy <liamfoy@sepulcrum.org>

--- a/net/Makefile
+++ b/net/Makefile
@@ -180,6 +180,7 @@
     SUBDIR += gnet
     SUBDIR += gnet-glib2
     SUBDIR += gnet2
+    SUBDIR += gnetcat
     SUBDIR += gnewtellium
     SUBDIR += gnomba
     SUBDIR += gnome-btdownload
