--- a/net/liferea/Makefile
+++ b/net/liferea/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	liferea
-PORTVERSION=	0.4.5
+PORTVERSION=	0.4.6b
 CATEGORIES=	net gnome
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	liferea
