Update to 2.0alpha1 release. [1] Correctly support NOPORTDOCS.
PR:		61254 [1]
Submitted by:	hrs
Approved by:	nork (mentor)

--- a/textproc/xmlcatmgr/Makefile
+++ b/textproc/xmlcatmgr/Makefile
@@ -6,28 +6,57 @@
 #
 
 PORTNAME=	xmlcatmgr
-PORTVERSION=	1.2
+PORTVERSION=	2.0.a1
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	${PORTNAME}
+DISTNAME=	${PORTNAME}-${PORTVERSION:S/.a/alpha/}
 
 MAINTAINER=	hrs@FreeBSD.org
 COMMENT=	SGML and XML catalog manager
 
-BUILD_DEPENDS=	buildtool:${PORTSDIR}/devel/buildtool
-
 MAN1=		xmlcatmgr.1
 
-do-configure:
-	cd ${WRKSRC} && buildtool config -p ${PREFIX} \
-		--dir-catalog=${PREFIX}/share/xml \
-		--dir-doc=${DOCSDIR}
+HAS_CONFIGURE=	yes
 
-do-build:
-	cd ${WRKSRC} && buildtool build
+CONFIGURE_SCRIPT=	configure.sh
+CONFIGURE_ARGS=		-D
+CONFIGURE_ARGS+=	-p ${PREFIX}
+CONFIGURE_ARGS+=	-d ${DOCSDIR}
+CONFIGURE_ARGS+=	-c ${CATALOG_PORTS_XML}
+CONFIGURE_ENV=		SED="${SED}"
+CONFIGURE_ENV+=		INSTALL_DATA="${INSTALL_DATA}"
+CONFIGURE_ENV+=		INSTALL_DIR="${INSTALL_DATA_DIR}"
+CONFIGURE_ENV+=		INSTALL_PROGRAM="${INSTALL_PROGRAM}"
+CONFIGURE_ENV+=		NOPORTDOCS="${NOPORTDOCS}"
 
-do-install:
-	cd ${WRKSRC} && buildtool install
-	@${SETENV} PKG_PREFIX=${PREFIX} ${SH} ${PKGINSTALL} ${PKGNAME} POST-INSTALL
+BUILD_WRKSRC=		${WRKSRC}/work
+INSTALL_WRKSRC=		${WRKSRC}/work
+
+COMMONVARS=		${WRKDIR}/commonvars.sh
+XMLCATMGR?=		${PREFIX}/bin/xmlcatmgr
+CATALOG_MASTER_SGML?=	${PREFIX}/share/sgml/catalog
+CATALOG_PORTS_SGML?=	${PREFIX}/share/sgml/catalog.ports
+CATALOG_MASTER_XML?=	${PREFIX}/share/xml/catalog
+CATALOG_PORTS_XML?=	${PREFIX}/share/xml/catalog.ports
+
+PKGINSTALL=		${WRKDIR}/pkg-install.sh
+PKGDEINSTALL=		${WRKDIR}/pkg-deinstall.sh
+
+post-build:
+	${TOUCH} ${COMMONVARS}
+	${ECHO} '#!/bin/sh' >> ${COMMONVARS}
+	${ECHO} 'PATH=$${PATH}:/bin:/usr/bin:${LOCALBASE}/bin:${X11BASE}/bin' >> ${COMMONVARS}
+	${ECHO} 'export PATH;' >> ${COMMONVARS}
+.for V in XMLCATMGR CATALOG_MASTER_SGML CATALOG_MASTER_XML CATALOG_PORTS_SGML CATALOG_PORTS_XML
+	${ECHO} '${V}=${${V}}' >> ${COMMONVARS}
+.endfor
+	${CAT} ${COMMONVARS} ${FILESDIR}/pkg-install.in > ${PKGINSTALL}
+	${CAT} ${COMMONVARS} ${FILESDIR}/pkg-deinstall.in > ${PKGDEINSTALL}
+	${CHMOD} 0555 ${PKGINSTALL} ${PKGDEINSTALL}
+
+post-install:
+	@${PKGINSTALL} ${PKGNAME} POST-INSTALL
+	@${CAT} ${PKGMESSAGE}
 
 .include <bsd.port.mk>
