--- a/x11-fm/emelfm2/files/patch-Makefile.config
+++ b/x11-fm/emelfm2/files/patch-Makefile.config
@@ -1,18 +1,17 @@
---- Makefile.config.orig	Mon Nov 24 21:59:28 2003
-+++ Makefile.config	Sun Dec  7 19:07:56 2003
+--- Makefile.config.orig	Sun Jan  4 14:44:43 2004
++++ Makefile.config	Sun Jan 11 18:02:59 2004
 @@ -5,13 +5,13 @@
- BIN_DIR = $(PREFIX)/bin
+ BIN_DIR ?= $(PREFIX)/bin
  endif
- PLUGINS_DIR = $(PREFIX)/lib/emelfm2/plugins/
--DOC_DIR = $(PREFIX)/share/doc/emelfm2/
-+DOC_DIR = $(DOCSDIR)
- ICON_DIR = $(PREFIX)/share/pixmaps/
+ PLUGINS_DIR ?= $(PREFIX)/lib/emelfm2/plugins/
+-DOC_DIR ?= $(PREFIX)/share/doc/emelfm2/
++DOC_DIR ?= $(DOCSDIR)
+ ICON_DIR ?= $(PREFIX)/share/pixmaps/
  
--CC = gcc
-+CC ?= gcc
+ CC ?= gcc
  
  #CFLAGS = -O2 -Wall
--CFLAGS = -Wall
+-CFLAGS += -Wall
 +CFLAGS ?= -Wall
  
  # setting DEBUG to 0/1 turns debugging off/on
