Remove WITHOUT_GNOME support because it doesn't work from the recent revision.
Submitted by:	Do Sung Hyuk <dhyuk@hands.pe.kr>

--- a/korean/gdick/Makefile
+++ b/korean/gdick/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	gdick
 PORTVERSION=	0.9.1
+PORTREVISION=	1
 CATEGORIES=	korean python
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	gdick
@@ -15,7 +16,8 @@ MAINTAINER=	perky@FreeBSD.org
 COMMENT=	English-Korean Dictionary Client for GNOME2
 
 RUN_DEPENDS=	${PYTHONPREFIX_SITELIBDIR}/gtk-2.0/atk.so:${PORTSDIR}/x11-toolkits/py-gtk2 \
-		${PYTHONPREFIX_SITELIBDIR}/cjkcodecs.pth:${PORTSDIR}/converters/py-cjkcodecs
+		${PYTHONPREFIX_SITELIBDIR}/cjkcodecs.pth:${PORTSDIR}/converters/py-cjkcodecs \
+		${PYTHONPREFIX_SITELIBDIR}/gtk-2.0/gconfmodule.so:${PORTSDIR}/x11-toolkits/py-gnome2
 
 USE_PYTHON=	yes
 USE_PYDISTUTILS=yes
@@ -25,13 +27,7 @@ PLIST_SUB=	${OPTPLIST_SUB}
 
 .include <bsd.port.pre.mk>
 
-.if defined(WITH_GNOME)
 USE_GNOME=	gnomehier
-RUN_DEPENDS+=	${PYTHONPREFIX_SITELIBDIR}/gtk-2.0/gconfmodule.so:${PORTSDIR}/x11-toolkits/py-gnome2
-OPTPLIST_SUB=	GNOMEONLY=""
-.else
-OPTPLIST_SUB=	GNOMEONLY="@comment "
-.endif
 
 post-patch:
 	${REINPLACE_CMD} -e \
@@ -39,10 +35,5 @@ post-patch:
 		${WRKSRC}/lib/gdick/gdick.py
 	${REINPLACE_CMD} -e 's,/usr/bin/gdick,${PREFIX}/bin/gdick,g' \
 		${WRKSRC}/GNOME_GDick.server
-.if !defined(WITH_GNOME)
-	${REINPLACE_CMD} -e 's/, "gdick_applet"//g' \
-		-e 's|, ("lib/bonobo/servers/", ("GNOME_GDick.server",))||g' \
-		${WRKSRC}/setup.py
-.endif
 
 .include <bsd.port.post.mk>
