add denature 0.6.5 A HTML to PDF converter

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -45,6 +45,7 @@
     SUBDIR += da-aspell
     SUBDIR += dadadodo
     SUBDIR += dbacl
+    SUBDIR += denature
     SUBDIR += dico
     SUBDIR += dict
     SUBDIR += dictfmt
