remove old comment which was needed while testing the port.

--- a/mail/squirrelmail/Makefile
+++ b/mail/squirrelmail/Makefile
@@ -95,7 +95,7 @@ do-install:
 .endif
 
 post-install:
-	#@${SH} ${PKGINSTALL} ${PKGNAME} POST-INSTALL
+	@${SH} ${PKGINSTALL} ${PKGNAME} POST-INSTALL
 	@${CAT} ${PKGMESSAGE}
 
 .include <bsd.port.mk>
