Add scan_ffs 1.0, scan_ffs recovers lost disklabel.
scan_ffs ported from OpenBSD to FreeBSD with support for UFS1 and UFS2,
allows recovering of lost or deletes disklabels

PR:		61273
Submitted by:	mranner@inode.at
Approved by:    erwin (mentor) (implicitly)

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -303,6 +303,7 @@
     SUBDIR += sarah
     SUBDIR += sb16config
     SUBDIR += sbniconfig
+    SUBDIR += scan_ffs
     SUBDIR += sdd
     SUBDIR += sec
     SUBDIR += service-config
