Add phpeclipse 1.0.8, PHP Eclipse adds PHP support to the Eclipse IDE Framework.
PR:		58399
Submitted by:	rtdean@cytherianage.net

--- a/java/Makefile
+++ b/java/Makefile
@@ -96,6 +96,7 @@
     SUBDIR += netcomponents
     SUBDIR += netrexx
     SUBDIR += openjit
+    SUBDIR += phpeclipse
     SUBDIR += proguard
     SUBDIR += sablevm
     SUBDIR += shujit
