--- a/security/prelude-manager/Makefile
+++ b/security/prelude-manager/Makefile
@@ -9,7 +9,7 @@ PORTVERSION=	0.8.10
 CATEGORIES=	security
 MASTER_SITES=	http://www.prelude-ids.org/download/releases/
 
-MAINTAINER=	sheepkiller@cultdeadsheep.org
+MAINTAINER=	clement@FreeBSD.org
 COMMENT=	Prelude Network Intrusion Detection System central logging point
 
 LIB_DEPENDS+=	prelude.1:${PORTSDIR}/security/libprelude \
