--- a/www/gforge/Makefile
+++ b/www/gforge/Makefile
@@ -10,7 +10,7 @@ PORTVERSION=	3.1
 CATEGORIES=	www devel
 MASTER_SITES=	http://gforge.org/download.php/44/
 
-MAINTAINER=	sheepkiller@cultdeadsheep.org
+MAINTAINER=	clement@FreeBSD.org
 COMMENT=	Open Source collaborative software development tool
 
 RUN_DEPENDS=	${LOCALBASE}/bin/php:${PORTSDIR}/lang/php4 \
