--- a/devel/libvanessa_logger/Makefile
+++ b/devel/libvanessa_logger/Makefile
@@ -12,7 +12,7 @@ MASTER_SITES=	http://www.vergenet.net/linux/vanessa/download/%SUBDIR%/
 MASTER_SITE_SUBDIR=	vanessa_logger/${PORTVERSION}
 DISTNAME=	vanessa_logger-${PORTVERSION}
 
-MAINTAINER=	sheepkiller@cultdeadsheep.org
+MAINTAINER=	clement@FreeBSD.org
 COMMENT=	Library that provides a generic logging layer
 
 MAN1=		vanessa_logger_sample.1
