--- a/mail/qmail-remove/Makefile
+++ b/mail/qmail-remove/Makefile
@@ -10,7 +10,7 @@ PORTVERSION=	0.93
 CATEGORIES=	mail
 MASTER_SITES=	http://www.linuxmagic.com/opensource/qmail/qmail-remove/
 
-MAINTAINER=	sheepkiller@cultdeadsheep.org
+MAINTAINER=	clement@FreeBSD.org
 COMMENT=	Removes messages from your qmail queue baed on a particular string
 
 DOC_FILES=	INSTALL LICENSE README
