--- a/security/prelude-lml/Makefile
+++ b/security/prelude-lml/Makefile
@@ -10,7 +10,7 @@ PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	http://www.prelude-ids.org/download/releases/
 
-MAINTAINER=	sheepkiller@cultdeadsheep.org
+MAINTAINER=	clement@FreeBSD.org
 COMMENT=	Prelude Network Intrusion Detection System Log Monitoring Lackey
 
 LIB_DEPENDS+=	prelude.1:${PORTSDIR}/security/libprelude \
