--- a/security/prelude-nids/Makefile
+++ b/security/prelude-nids/Makefile
@@ -9,7 +9,7 @@ PORTVERSION=	0.8.6
 CATEGORIES=	security
 MASTER_SITES=	http://www.prelude-ids.org/download/releases/
 
-MAINTAINER=	sheepkiller@cultdeadsheep.org
+MAINTAINER=	clement@FreeBSD.org
 COMMENT=	Prelude Network Intrusion Detection System sensor
 
 LIB_DEPENDS=	prelude.1:${PORTSDIR}/security/libprelude
