--- a/www/mod_auth_pam2/Makefile
+++ b/www/mod_auth_pam2/Makefile
@@ -11,7 +11,7 @@ CATEGORIES=	www
 MASTER_SITES=	http://pam.sourceforge.net/mod_auth_pam/dist/
 DISTNAME=	${PORTNAME}-2.0-${PORTVERSION}
 
-MAINTAINER=	sheepkiller@cotds.org
+MAINTAINER=	clement@FreeBSD.org
 COMMENT=	Allows users to use PAM modules for user authentication
 
 BUILD_DEPENDS=	${LOCALBASE}/sbin/apxs:${PORTSDIR}/www/apache2
