Add phpeclipse_sql 1.0.1, PHP Eclipse SQL Utility plugin for Eclipse IDE Framework.
PR:		58400
Submitted by:	rtdean@cytherianage.net

--- a/java/Makefile
+++ b/java/Makefile
@@ -97,6 +97,7 @@
     SUBDIR += netrexx
     SUBDIR += openjit
     SUBDIR += phpeclipse
+    SUBDIR += phpeclipse_sql
     SUBDIR += proguard
     SUBDIR += sablevm
     SUBDIR += shujit
