Update MASTER_SITE and WWW

--- a/security/pam-pgsql/Makefile
+++ b/security/pam-pgsql/Makefile
@@ -10,13 +10,13 @@ PORTVERSION=	0.5.2
 PORTREVISION=	7
 CATEGORIES=	security databases
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE} \
-		http://mat.cc/distfiles/
-MASTER_SITE_SUBDIR=	pam-pgsql
-DISTFILES=	${PORTNAME}_${PORTVERSION}.orig${EXTRACT_SUFX}
+		${MASTER_SITE_LOCAL:S/$/:local/}
+MASTER_SITE_SUBDIR=	pam-pgsql mat/:local
+DISTFILES=	${PORTNAME}_${PORTVERSION}.orig${EXTRACT_SUFX}:DEFAULT,local
 
-PATCHFILES=	${PORTNAME}_${PORTVERSION}-5.diff.gz
+PATCHFILES=	${PORTNAME}_${PORTVERSION}-5.diff.gz:DEFAULT,local
 PATCH_SITES=	${MASTER_SITES}
-PATCH_SITE_SUBDIR=	${MASTER_SITE_SUBDIR}
+PATCH_SITE_SUBDIR=	${MASTER_SITE_SUBDIR} mat/:local
 
 MAINTAINER=	mat@FreeBSD.org
 COMMENT=	A pam module for authenticating with PostgreSQL
