Add phpeclipse_phphelp 1.0.4, PHP Eclipse Help for the Eclipse IDE Framework.
PR:		58402
Submitted by:	rtdean@cytherianage.net

--- a/java/Makefile
+++ b/java/Makefile
@@ -97,6 +97,7 @@
     SUBDIR += netrexx
     SUBDIR += openjit
     SUBDIR += phpeclipse
+    SUBDIR += phpeclipse_phphelp
     SUBDIR += phpeclipse_sql
     SUBDIR += phpeclipse_tidy
     SUBDIR += proguard
