create Latest/ruby.tbz of ruby 1.9
when RUBY_DEFAULT_VER in the official portstree is bumped to 1.9, this
commit may be reverted

--- a/lang/ruby18/Makefile
+++ b/lang/ruby18/Makefile
@@ -40,6 +40,7 @@ USE_RUBY=		yes
 RUBY_NO_BUILD_DEPENDS=	yes
 RUBY_NO_RUN_DEPENDS=	yes
 _RUBY_SYSLIBDIR=	${PREFIX}/lib
+NO_LATEST_LINK=	yes
 
 OPTIONS_DEFINE=	ONIGURUMA RDOC DEBUG
 ONIGURUMA_DESC=	Build with oniguruma regular expressions lib
