import check_resque from build82
also, USE_GITHUB

--- a/net-mgmt/Makefile
+++ b/net-mgmt/Makefile
@@ -38,6 +38,7 @@
     SUBDIR += check_logfiles
     SUBDIR += check_multi
     SUBDIR += check_mysql_health
+    SUBDIR += check_resque
     SUBDIR += check_snmp_pkgvuln
     SUBDIR += chillispot
     SUBDIR += choparp
