import databases/check_postgres from build82

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -28,6 +28,7 @@
     SUBDIR += cassandra
     SUBDIR += cdb
     SUBDIR += cego
+    SUBDIR += check_postgres
     SUBDIR += couchdb
     SUBDIR += courier-authlib-mysql
     SUBDIR += courier-authlib-pgsql
